[package]
name = "nekobako_opening_mod"
version = "0.7.0"
authors = [ "Unbistrackted", "DCNick3" ]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A300BA2C000" # UMINEKO

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.5.1"
skyline-config = { git = "https://github.com/skyline-rs/skyline-config", branch="master", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
once_cell = "1.21.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
