[package]
name = "nekobako-opening-mod"
version = "0.2.1"
authors = ["Unbistrackted", "DCNick3"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Unbistrackted/nekobako-opening-mod"
keywords = ["skyline", "mod", "switch", "rust"]

[package.metadata.skyline]
titleid = "01006A300BA2C000" # Umineko no Naku Koro ni Saku ~Nekobako to Musou no Koukyoukyoku~
custom-npdm = "../main.npdm"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.5.1"
skyline-config = { git = "https://github.com/skyline-rs/skyline-config", branch = "master", features = [
    "yaml",
] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
once_cell = "1.21.3"
smart-default = "0.7.1"
nekobako-plugin-utils = { git = "https://github.com/Unbistrackted/nekobako-plugin-utils" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
